--- a/rock-paper-scissors/style.css
+++ b/rock-paper-scissors/style.css
@@ -1,23 +1,23 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700,900');
 
+* { transition: all 0.3s linear; }
+
 body {
 	min-height: 100vh;
-	margin: 0;
 	padding: 0;
-	font-family: 'Lato', sans-serif;
-	text-align: center;
-	font-size: 16px;
-	background-image: linear-gradient(to right bottom, #89a8d6, #70c6e3, #7cdfda, #b2f3c4, #f8ffb8);
-	background-repeat: no-repeat;
+	margin: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-image: linear-gradient(to right bottom, #89a8d6, #70c6e3, #7cdfda, #b2f3c4, #f8ffb8);
+	background-repeat: no-repeat;
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	text-align: center;
 }
 
-.container {
-	padding: 20px 5%;
-}
+.container { padding: 20px 5%; }
 
 #inside {
 	margin: 0 auto;
@@ -25,21 +25,16 @@ body {
 }
 
 h1 {
-	font-size: 50px;
 	margin: 10px 0;
+	font-size: 50px;
 }
 
-p {
-	color: #000;
-}
-
-hr {
-	width: 50%;
-}
+p { color: #000; }
+hr { width: 50%; }
 
 #instruction {
-	font-size: 24px;
 	margin-bottom: 10px;
+	font-size: 24px;
 }
 
 .img-weapon {
@@ -55,11 +50,11 @@ hr {
 }
 
 .select-choice {
-	flex-basis: 30%;
 	padding: 10px;
 	border: 5px solid #000000;
 	border-radius: 80px;
 	margin: 10px;
+	flex-basis: 30%;
 	transition: all 0.6s ease;
 }
 
@@ -86,9 +81,9 @@ hr {
 }
 
 .result p {
+	padding: 5px 10px;
 	border-radius: 5px;
 	display: inline-block;
-	padding: 5px 10px;
 	font-size: 20px;
 	font-weight: 600;
 }
@@ -125,45 +120,45 @@ hr {
 
 .scores {
 	padding: 5px;
-	background-color: #002b46;
 	border-radius: 25px;
+	background-color: #002b46;
 }
 
 .scores p {
+	margin: 10px;
 	color: #fff;
 	font-size: 24px;
 	font-weight: 600;
-	margin: 10px;
 }
 
 .score-box {
 	width: 200px;
 	border-radius: 10px;
+	margin: 20px auto 0;
 	display: flex;
 	align-items: center;
-	justify-content: space-evenly;
 	align-self: center;
-	margin: 20px auto 0;
+	justify-content: space-evenly;
 }
 
 .score-box .fa-solid {
-	font-size: 40px;
 	color: #b0e6f9;
+	font-size: 40px;
 }
 
 #reset-button {
-	background: #fff;
 	border: 2px solid #000;
+	padding: 5px 10px;
 	border-radius: 5px;
+	outline: none;
+	margin: 10px 0;
 	display: inline-block;
-	cursor: pointer;
+	background: #fff;
 	color: #000;
+	cursor: pointer;
 	font-size: 16px;
 	font-weight: 600;
-	padding: 5px 10px;
 	text-decoration: none;
-	margin: 10px 0;
-	outline: none;
 	text-transform: capitalize;
 }
 
@@ -173,18 +168,16 @@ hr {
 }
 
 footer {
-	font-size: 14px;
 	margin-top: 30px;
+	font-size: 14px;
 }
 
 .fab {
-	color: #000;
 	margin: 0 5px;
+	color: #000;
 }
 
-footer p {
-	margin: 5px 0;
-}
+footer p { margin: 5px 0; }
 
 footer a {
 	color: #000;
@@ -200,36 +193,18 @@ footer a {
 		height: auto
 	}
 
-	.select-choice {
-		margin: 10px;
-	}
-
-	#rock:hover {
-		background-color: #FFEE88;
-	}
-	
-	#paper:hover {
-		background-color: #F40076;
-	}
-	
-	#scissors:hover {
-		background-color: #75C9C8;
-	}
+	.select-choice { margin: 10px; }
 }
 
 @media (max-width: 767px) {
-	#inside {
-		width: 80%;
-	}
+	#inside { width: 80%; }
 
 	.img-weapon {
 		max-width: 75px;
 		height: auto
 	}
 
-	.result p {
-		font-size: 16px;
-	}
+	.result p { font-size: 16px; }
 }
 
 @media (max-width: 600px) {
@@ -238,25 +213,11 @@ footer a {
 		padding: 0;
 	}
 
-	h1 {
-		font-size: 32px;
-	}
-
-	#instruction {
-		font-size: 18px;
-	}
-
-	.result p {
-		font-size: 12px;
-	}
-
-	.score-box .fa-solid {
-		font-size: 24px;
-	}
-	
-	.score-box p {
-		font-size: 16px;
-	}
+	h1 { font-size: 32px; }
+	#instruction { font-size: 18px; }
+	.result p { font-size: 12px; }
+	.score-box .fa-solid { font-size: 24px; }
+	.score-box p { font-size: 16px; }
 
 	.img-weapon {
 		max-width: 60px;
@@ -265,15 +226,10 @@ footer a {
 
 	.select-choice {
 		padding: 5px;
-		margin: 5px;
 		border-width: 3px;
+		margin: 5px;
 	}
 
-	#reset-button {
-		font-size: 12px;
-	}
-
-	.result {
-		font-size: 14px;
-	}
+	#reset-button { font-size: 12px; }
+	.result { font-size: 14px; }
 }
