--- a/spotify-music/style.css
+++ b/spotify-music/style.css
@@ -46,14 +46,17 @@ body {
 h2 {
   margin: -10px 20px 20px 20px;
   font-size: 24px;
+  line-height: 1.4;
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
 
 h3 {
-  margin: 5px 0 0;
-  font-size: 16px;
+  width: 90%;
+  margin: 5px auto 0;
+  font-size: 14px;
   font-weight: 400;
+  line-height: 1.6;
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
