--- a/spotify-music/style.css
+++ b/spotify-music/style.css
@@ -3,6 +3,12 @@
 
 * { box-sizing: border-box; }
 
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 5px; height: 7px; }
+::-webkit-scrollbar-track { background: #f1f1f1; }
+::-webkit-scrollbar-thumb { background: #001401; border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: #1f8600; }
+
 body {
   min-height: 100vh;
   margin: 0;
