--- a/music-player/style.css
+++ b/music-player/style.css
@@ -15,7 +15,6 @@ body {
 
 .player-container {
   width: 400px;
-  height: 500px;
   border-radius: 20px;
   background: #e7e7e7;
   box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.3);
@@ -25,10 +24,7 @@ body {
 .img-container {
   width: 300px;
   height: 300px;
-  position: relative;
-  top: -7%;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: -30px auto 30px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -44,6 +40,7 @@ body {
 h2 {
   margin: 0;
   font-size: 24px;
+  line-height: 1.6;
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
@@ -52,6 +49,7 @@ h3 {
   margin: 5px 0 0;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.6;
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
@@ -85,10 +83,7 @@ h3 {
 /* Controls */
 .player-controls {
   width: 200px;
-  position: relative;
-  top: -15px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: 30px auto;
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
@@ -123,7 +118,7 @@ h3 {
   .img-container {
     width: 230px;
     height: 230px;
-    top: -8%;
+    margin: -20px auto 20px;
   }
 
   h2 { font-size: 20px; }
