--- a/todolist/style.css
+++ b/todolist/style.css
@@ -30,6 +30,7 @@ h1 {
 }
 
 form {
+	margin: 0 auto;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 	max-width: 100%;
 	width: 400px;
@@ -78,8 +79,17 @@ form {
 	text-align: center;
 }
 
-@media screen and (max-width: 480px) {
+.instructions span { line-height: 1.6; }
+.instructions .mobile { display: none; }
+
+@media screen and (max-width: 995px) {
 	.wrapper { width: 90%; }
+	.instructions .desktop { display: none; }
+	.instructions .mobile { display: block; }
+}
+
+@media screen and (max-width: 480px) {
+	.wrapper { width: 80%; }
 	h1 { font-size: 32px; }
 	.input { font-size: 14px; }
 	.todos li { font-size: 14px; }
