--- a/todolist/style.css
+++ b/todolist/style.css
@@ -1,19 +1,17 @@
 /*Importing Google Font*/
 @import url('https://fonts.googleapis.com/css?family=Poppins:wght@200;400&display=swap');
 
-* {
-	box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
-	background-color: #f5f5f5;
-	color: #444;
 	min-height: 100vh;
 	margin: 0;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 	justify-content: center;
+	color: #444;
+	background-color: #f5f5f5;
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -25,46 +23,41 @@ body {
 h1 {
 	color: rgb(179, 131, 226);
 	font-size: 52px;
-	text-align: center;
 	opacity: 0.8;
+	text-align: center;
 }
 
 form {
+	width: 400px;
+	max-width: 100%;
 	margin: 0 auto;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-	max-width: 100%;
-	width: 400px;
 }
 
 .input {
+	width: 100%;
+	padding: 10px 12px;
 	border: none;
+	display: block;
 	color: #444;
 	font-size: 16px;
-	padding: 10px 12px;
-	display: block;
-	width: 100%;
 }
 
-.input::placeholder {
-	color: #d5d5d5;
-}
-
-.input:focus {
-	outline-color: rgb(179, 131, 226);
-}
+.input::placeholder { color: #d5d5d5; }
+.input:focus { outline-color: rgb(179, 131, 226); }
 
 .todos {
-	background-color: #fff;
-	padding: 0;
-	list-style-type: none;
 	margin: 0;
+	padding: 0;
+	background-color: #fff;
+	list-style-type: none;
 }
 
 .todos li {
+	padding: 10px 12px;
 	border-top: 1px solid #e5e5e5;
 	cursor: pointer;
 	font-size: 16px;
-	padding: 10px 12px;
 }
 
 .todos li.completed {
