--- a/spotify-music/assets/css/playlist.css
+++ b/spotify-music/assets/css/playlist.css
@@ -1,7 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 5px; height: 7px; }
+::-webkit-scrollbar-track { background: #f1f1f1; }
+::-webkit-scrollbar-thumb { background: #001401; border-radius: 25px;}
+::-webkit-scrollbar-thumb:hover { background: #1f8600; }
+
 body {
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1b1b1b;
   font-family: "Poppins", sans-serif;
+  font-size: 12px;
+}
+
+.container {
+  width: 600px;
+  padding: 20px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  margin: 0 auto;
+  background-color: #fff;
+}
+
+.spotify-music-container {
+  width: 200px;
+  margin: 20px auto 30px;
+}
+
+.spotify-music-container figure {
+  width: 100%;
+  margin: 0;
+}
+
+.spotify-music-container img {
+  display: block;
+  width: 100%;
 }
 
 .btn.dropdown-toggle {
@@ -15,8 +53,45 @@ span.caret {
   top: 45%;
 }
 
+.playlist-form .form-control {
+  margin: 20px 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+}
+
+.playlist-form .button-container {
+  margin: 30px auto;
+  text-align: center;
+}
+
+.playlist-form .button-container button {
+  padding: 5px 10px;
+  border: 2px solid #1ab26b;
+  border-radius: 5px;
+  background-color: #fff;
+  color: #1ab26b;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: capitalize;
+  transform: 0.3s all linear;
+}
+
+.playlist-form .button-container button:hover {
+  color: #fff;
+  background-color: #1ab26b;
+}
+
 label {
-  padding-top: 5px;
+  padding: 5px 10px;
+  margin-right: 5px;
+}
+
+.playlist-form select {
+  width: 100%;
+  padding: 5px 10px;
 }
 
 .form-label {
@@ -124,5 +199,31 @@ img.track {
 
   .preview-song h3 {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width:480px) {
+ 
+  .container { 
+    width: 80%; 
+    padding: 10px;
+  }
+
+  .spotify-music-container {
+    width: 60%;
+    min-width: 150px;
+  }
+
+  .playlist-form .form-control {
+    font-size: 12px;
+  }
+
+  .playlist-form .button-container button {
+    font-size: 12px;
+  }
+
+  .playlist-form .button-container button {
+    color: #fff;
+    background-color: #1ab26b;
   }
 }
