--- a/spotify-music/assets/css/playlist.css
+++ b/spotify-music/assets/css/playlist.css
@@ -95,38 +95,26 @@ label {
   cursor: pointer;
 }
 
-.form-label {
-  padding-left: 0px !important;
-}
-
-.form-control {
-  border-radius: 100px;
-}
+.form-label { padding-left: 0px !important; }
+.form-control { border-radius: 100px; }
 
 .btn-success {
-  background-color: #3b7d4a im !important;
-  border-radius: 100px;
   border: none;
+  border-radius: 100px;
+  background-color: #3b7d4a im !important;
   cursor: pointer;
 }
 
-.btn-success:hover {
-  background-color: #4daf64;
-}
-
-img.track {
-  border: 3px solid #8a8a8a;
-}
+.btn-success:hover { background-color: #4daf64; }
+img.track { border: 3px solid #8a8a8a; }
 
 .preview-song {
-  padding: 20px;
   width: 100%;
+  padding: 20px;
   border: 1px solid #ccc;
 }
 
-.preview-audio-single {
-  width: 100%;
-}
+.preview-audio-single { width: 100%; }
 
 .preview-song img {
   width: 280px;
@@ -176,17 +164,9 @@ img.track {
     margin: 0 auto;
   }
 
-  .song-list {
-    width: 100%;
-  }
-
-  .song-detail {
-    padding: 0;
-  }
-
-  .preview-song {
-    margin: 30px 0;
-  }
+  .song-list { width: 100%; }
+  .song-detail { padding: 0; }
+  .preview-song { margin: 30px 0; }
 
   .preview-song img {
     width: 100%;
@@ -194,13 +174,8 @@ img.track {
     min-width: 150px;
   }
 
-  .preview-song h2 {
-    font-size: 26px;
-  }
-
-  .preview-song h3 {
-    font-size: 18px;
-  }
+  .preview-song h2 { font-size: 26px; }
+  .preview-song h3 { font-size: 18px; }
 }
 
 @media screen and (max-width:480px) {
@@ -215,13 +190,8 @@ img.track {
     min-width: 150px;
   }
 
-  .playlist-form .form-control {
-    font-size: 12px;
-  }
-
-  .playlist-form .button-container button {
-    font-size: 12px;
-  }
+  .playlist-form .form-control { font-size: 12px; }
+  .playlist-form .button-container button { font-size: 12px; }
 
   .playlist-form .button-container button {
     color: #fff;
