spotify-music player UI improved for desktop and mobile

--- a/spotify-music/assets/css/style.css
+++ b/spotify-music/assets/css/style.css
@@ -22,35 +22,37 @@ body {
 }
 
 .player-container {
-  width: 400px;
-  min-height: 400px;
+  width: 600px;
+  min-height: 300px;
   border-radius: 20px;
+  padding: 20px;
   background: #e7e7e7;
   box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-container {
-  width: 300px;
-  height: 300px;
-  position: relative;
-  top: -40px;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 250px;
+  height: 250px;
+  margin: 25px;
   transition: all 0.3s ease-in-out;
 }
+
+.player-section { width: 300px; }
 
 .img-container img {
   height: 100%;
   width: 100%;
-  border-radius: 20px;
   box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.5);
   object-fit: cover;
   pointer-events: none;
 }
 
 h2 {
-  margin: -10px 20px 20px 20px;
+  margin: 20px;
   font-size: 24px;
   line-height: 1.4;
   text-align: center;
@@ -97,7 +99,7 @@ h3 {
 .player-controls {
   box-sizing: border-box;
   width: 100%;  
-  margin: 30px auto;
+  margin: 20px auto;
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
@@ -126,7 +128,7 @@ h3 {
 }
 
 .playlist-details {
-  width: 400px;
+  width: 600px;
   padding: 5px 10px;
   border: 1px solid #c5c5c5;
   border-radius: 10px;
@@ -192,23 +194,51 @@ h3 {
 
 /* Media Query for Mobile Responsive */
 
+@media screen and (max-width:995px) {
+  .playlist-details a:hover { color: #fff; }
+}
+
+@media screen and (max-width:600px) {
+  .player-container { 
+    margin-top: 30px;
+    width: 350px;
+    display: block;
+  }
+
+  .img-container { margin: 20px auto 0; }
+  .player-section { margin: 20px auto; }
+
+  .playlist-details { 
+    width: 100%; 
+    max-width: 350px;
+  }
+
+  .image-container { margin-bottom: 30px; }
+}
+
 @media screen and (max-width:480px) {
-  .player-container { width: 300px; }  
+  .player-container { 
+    width: 300px; 
+    padding: 0;
+  }  
 
   .img-container {
     width: 230px;
     height: 230px;
-    top: -25px;
+    margin-top: 30px;
   }
 
   h2 { 
     margin: 10px 20px 20px 20px;
-    font-size: 20px; 
+    font-size: 20px;
   }
 
   h3 { font-size: 12px; }
   .duration-wrapper { font-size: 10px; }
   .fas:hover { filter: brightness(100%); }
+
+  .progress-container { width: 80%; }
+  .player-controls { margin: 30px auto; }
 
   .playlist-details { 
     width: 100%; 
@@ -216,14 +246,20 @@ h3 {
     font-size: 12px;
   }
 
-  .playlist-details a:hover { color: #fff; }
-}
+  .spotify-container .playlist-btn-link {
+    width: 40px;
+    height: 40px;
+  }
 
-@media screen and (max-width:340px) {
-  .img-container {
-    margin: 30px auto;
-    top: 0;
-    left: 0;
-    transform: translateX(0);
+  .spotify-container .spotify-link,
+  .spotify-container .spotify-link img {
+    width: auto;
+    height: 40px;
+  }
+
+  .spotify-container .download-link {
+    width: 40px;
+    height: 40px;
+    font-size: 40px;
   }
 }
