--- a/spotify-music/assets/css/style.css
+++ b/spotify-music/assets/css/style.css
@@ -36,7 +36,6 @@ body {
 
 .img-container {
   width: 250px;
-  height: 250px;
   margin: 25px;
   transition: all 0.3s ease-in-out;
 }
@@ -61,7 +60,7 @@ h2 {
 
 h3 {
   width: 90%;
-  margin: 5px auto 0;
+  margin: 0 auto;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.6;
@@ -137,12 +136,12 @@ h3 {
   font-size: 14px;
   line-height: 1.8;
   text-align: center;
+  transition: all 0.3s ease-in-out;
 }
 
 .playlist-details a {
   color: #fff;
   text-decoration: none;
-  transition: 0.3s all linear;
 }
 
 .playlist-details a:hover { color: #ccc; }
@@ -173,12 +172,14 @@ h3 {
   width: 50px;
   height: 50px;
   margin-right: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 .spotify-container .spotify-link,
 .spotify-container .spotify-link img {
   width: auto;
   height: 50px;
+  transition: all 0.3s ease-in-out;
 }
 
 .spotify-container .download-link {
@@ -190,6 +191,7 @@ h3 {
   font-size: 50px;
   color: #1ed760;
   vertical-align: top;
+  transition: all 0.3s ease-in-out;
 }
 
 /* Media Query for Mobile Responsive */
@@ -207,6 +209,13 @@ h3 {
 
   .img-container { margin: 20px auto 0; }
   .player-section { margin: 20px auto; }
+
+  h2 { 
+    margin: 30px 20px 20px;
+    font-size: 20px;
+  }
+
+  h3 { font-size: 12px; }
 
   .playlist-details { 
     width: 100%; 
@@ -228,12 +237,6 @@ h3 {
     margin-top: 30px;
   }
 
-  h2 { 
-    margin: 10px 20px 20px 20px;
-    font-size: 20px;
-  }
-
-  h3 { font-size: 12px; }
   .duration-wrapper { font-size: 10px; }
   .fas:hover { filter: brightness(100%); }
 
