--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -216,6 +216,14 @@ input[type='number']:focus {
 	cursor: pointer;
 }
 
+.developer-container p { font-size: 14px; }
+
+.developer-container a {
+	color: var(--dark-color);
+	font-size: 14px;
+	text-decoration: none;
+}
+
 /* Responsive Styling */
 
 @media screen and (max-width:995px) {
