--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -65,22 +65,20 @@ h4 {
 }
 
 .currency-select {
-	width: 25px;
-	height: 25px;
+	padding: 5px 10px;
 	border: 0;
 	outline: 0;
 	border-radius: 25px;
 	margin-bottom: 20px;
-	float: right;
 	background-color: var(--body-background);
 	color: var(--light-color);
 	cursor: pointer;
 	font-size: 12px;
 	font-weight: 700;
 	-webkit-appearance: none;
-  -moz-appearance: none;
-  text-indent: 1px;
-  text-overflow: '';
+	-moz-appearance: none;
+	text-indent: 1px;
+	text-overflow: '';
 	text-align: center;
 }
 
@@ -210,6 +208,7 @@ input[type='number']:focus {
 	border: none;
 	outline: none;
 	border-radius: 25px;
+	float: right;
 	font-size: 12px;
 	background-color: var(--body-background);
 	color: var(--light-color);
@@ -219,7 +218,6 @@ input[type='number']:focus {
 .developer-container p { 
 	margin: 20px auto 0;
 	font-size: 14px;
-	/* text-align: center; */
 }
 
 .developer-container a {
