--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -77,6 +77,7 @@ h4 {
 	font-weight: 700;
 	-webkit-appearance: none;
 	-moz-appearance: none;
+	appearance: none;
 	text-indent: 1px;
 	text-overflow: '';
 	text-align: center;
@@ -216,7 +217,6 @@ input[type='number']:focus {
 }
 
 .mobile-apps-info a {
-	display: inline-block;
 	float: right;
 	color: var(--dark-color);
 	text-decoration: none;
