--- a/spotify-playlist/assets/css/playlist.css
+++ b/spotify-playlist/assets/css/playlist.css
@@ -1,4 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+/* Importing Fonts */
+
+@font-face {
+  font-family: Poppins;
+  src: url('../fonts/Poppins/Poppins-Regular.ttf');
+}
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar { width: 5px; height: 7px; }
@@ -14,7 +19,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #1b1b1b;
-  font-family: "Poppins", sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 12px;
 }
 
