--- a/spotify-playlist/assets/css/style.css
+++ b/spotify-playlist/assets/css/style.css
@@ -15,7 +15,17 @@
   src: url('../fonts/Spartan/Spartan-Bold.ttf');
 }
 
-* { box-sizing: border-box; }
+* { 
+  box-sizing: border-box; 
+  /* To prevent highlight color */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar { width: 5px; height: 7px; }
@@ -98,8 +108,21 @@ h3 {
   width: 0%;
   height: 100%;
   border-radius: 5px;
+  position: relative;
   background: #242323;
   transition: width 0.1s linear;
+}
+
+.progress::after {
+  content: '';
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  position: absolute;
+  top: -3px;
+  right: -5px;
+  background-color: #242323;
 }
 
 .duration-wrapper {
@@ -127,6 +150,8 @@ h3 {
   user-select: none;
   vertical-align: middle;
 }
+
+.fas:active { transform: translateY(2px); }
 
 .fas.fa-play-circle, 
 .fas.fa-pause-circle {
