--- a/spotify-playlist/assets/css/style.css
+++ b/spotify-playlist/assets/css/style.css
@@ -82,6 +82,7 @@ h2 {
   transition: all 0.3s ease-in-out;
   font-family: SpartanBold, sans-serif;
   font-weight: 700;
+  user-select:text;
 }
 
 h3 {
@@ -92,6 +93,7 @@ h3 {
   line-height: 1.6;
   text-align: center;
   transition: all 0.3s ease-in-out;
+  user-select:text;
 }
 
 /* Progress */
