--- a/spotify-playlist/assets/css/playlist.css
+++ b/spotify-playlist/assets/css/playlist.css
@@ -5,6 +5,18 @@
   src: url('../fonts/Poppins/Poppins-Regular.ttf');
 }
 
+* { 
+  box-sizing: border-box; 
+  /* To prevent highlight color */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 /* Custom Scrollbar */
 ::-webkit-scrollbar { width: 5px; height: 7px; }
 ::-webkit-scrollbar-track { background: #f1f1f1; }
