--- a/todolist/assets/css/style.css
+++ b/todolist/assets/css/style.css
@@ -11,10 +11,34 @@
 :root {
     --primary-color: #b383e2;
     --font-color: #444;
-	--light-font-color: #e5e5e5;
-	--placeholder-font-color: #d5d5d5;
+	--light-font-color: #b6b6b6;
+	--placeholder-font-color: #e6cffd;
+	--list-border-color: #e5e5e5;
+	--text-background-color: #fff;
     --body-background: #f5f5f5;
     --box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  [data-theme="light"] {
+	--primary-color: #b383e2;
+    --font-color: #444;
+	--light-font-color: #b6b6b6;
+	--placeholder-font-color: #e6cffd;
+	--list-border-color: #e5e5e5;
+	--text-background-color: #fff;
+    --body-background: #f5f5f5;
+    --box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  [data-theme="dark"] {
+	--primary-color: #faaf17;
+    --font-color: #fff;
+	--light-font-color: #6d6d6d;
+	--placeholder-font-color: #fae295; /* #f8cd77; */
+	--list-border-color: #2b2b2b;
+	--text-background-color: #000;
+    --body-background: #1b1b1b;
+    --box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
   }
 
 * { box-sizing: border-box; }
@@ -43,6 +67,8 @@ h1 {
 	text-align: center;
 }
 
+.todo-icon:hover { cursor: pointer; }
+
 img {
     width: 100%;
     display: block;
@@ -60,7 +86,8 @@ form {
 	padding: 10px 12px;
 	border: none;
 	display: block;
-	color: #444;
+	background-color: var(--text-background-color);
+	color: var(--font-color);
 	font-size: 18px;
 	line-height: 1.6;
 }
@@ -77,13 +104,14 @@ form {
 
 .todos li {
 	padding: 10px 12px;
-	border-top: 1px solid var(--light-font-color);
+	border-top: 1px solid var(--list-border-color);
+	background-color: var(--text-background-color);
 	cursor: pointer;
 	font-size: 18px;
 }
 
 .todos li.completed {
-	color: #b6b6b6;
+	color: var(--light-font-color);
 	text-decoration: line-through;
 }
 
@@ -103,7 +131,17 @@ form {
     text-align: center;
   }
   
-.developer-info a { display: block; }
+.developer-info a { 
+	display: block; 
+	/* To prevent highlight color */
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
 
 @media screen and (max-width: 995px) {
 	.wrapper { width: 90%; }
