--- a/todolist/assets/css/style.css
+++ b/todolist/assets/css/style.css
@@ -23,7 +23,7 @@
 	--primary-color: #b383e2;
     --font-color: #444;
 	--light-font-color: #b6b6b6;
-	--placeholder-font-color: #e6cffd;
+	--placeholder-font-color: #d4acfc;
 	--list-border-color: #e5e5e5;
 	--text-background-color: #fff;
     --body-background: #f5f5f5;
