--- a/todolist/assets/css/style.css
+++ b/todolist/assets/css/style.css
@@ -53,6 +53,7 @@ body {
 	color: var(--font-color);
 	background-color: var(--body-background);
 	font-family: Poppins, sans-serif;
+	transition: all 0.5s ease-in-out;
 }
 
 .wrapper {
