--- a/music-player/style.css
+++ b/music-player/style.css
@@ -26,6 +26,14 @@ body {
   height: 300px;
   margin: -30px auto 30px;
   transition: all 0.3s ease-in-out;
+  /* To prevent highlight color */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .img-container img {
@@ -62,6 +70,14 @@ h3 {
   margin: 40px auto;
   background: #fff;
   cursor: pointer;
+  /* To prevent highlight color */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .progress {
@@ -86,6 +102,14 @@ h3 {
   margin: 30px auto;
   text-align: center;
   transition: all 0.3s ease-in-out;
+  /* To prevent highlight color */
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .fas {
